--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Matemasie&display=swap');
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
 }
 
 body {
+  
   height: 100vh;
   background: #f6f6f6;
   display: flex;
@@ -17,23 +17,26 @@ body {
 }
 
 .screen {
-  height: 2rem;
-  margin-bottom: 4rem;
+  height: 6rem;
+  margin-bottom: 1rem; /* Adjust margin if needed */
+  background: #e9f0f4;
 }
 
-.wrapper{
-  height: 20rem;
-  width: 30rem;
+.wrapper {
+  height: auto; /* Allow wrapper to adjust height based on content */
+  width: 20rem;
   padding: 2rem;
-  margin-top: 4rem;
-  background: #f9f9f9;
+  background: #000000;
   border-radius: 1rem;
-  box-shadow: 15px 10px 15px -3px rgba(0,0,0,0.1);
+  box-shadow: 15px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem; /* Space between elements */
 }
 
-.buttonBox{
+.buttonBox {
   display: grid;
-  grid-template-columns: repeat(4,1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 1rem;
 }
 
@@ -56,12 +59,12 @@ body {
   border: 2px solid #8c2c2c;
 }
 
-
 .equals {
-  background: #4bd086;
-  grid-column: 3/5;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 0%, rgba(0, 212, 255, 1) 100%);
+  grid-column: 3 / 5;
 }
 
-.opt {
+.plus, .minus, .multiply, .divide {
   background: #f79505 !important;
 }
